# duckDB-dbt-airflow-local-build

./: Dockerfile  README.md  pyproject.toml
