[tool.poetry]
name = "duckdb-dbt-airflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
apache-airflow = "2.8.0"
dbt-core = "1.7.0"
duckdb = "0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
